# SynPin

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.en.md  CONTRIBUTING.md  INSTALL.md  LICENSE  README.en.md  README.md  README.ru.md  bootstrap.ps1  colors.ps1  colors.sh  dev.bat  dev.ps1  install  install.ps1  install.sh  package.json  tool_check.txt  tools_test.txt
core/: dev_server.py  pyproject.toml  test.txt
core/synpin/: __init__.py  __main__.py  paths.py  paths_legacy.py  time.py  ws_broadcast.py
core/synpin/agents/: __init__.py  external.py  manager.py  names.py
core/synpin/api/: __init__.py  _base.py  agents_router.py  config_router.py  connections_router.py  cron_router.py  external_agents_router.py  hermes_chat_router.py  kanban_config_router.py  kanban_router.py  memory_router.py  protocol_router.py  providers_router.py  server.py  setup_router.py  skills_router.py  stats_router.py  themes_router.py  tools_router.py  triggers_router.py  version_router.py  widgets_router.py
core/synpin/chat/: __init__.py  otdel_chat_router.py  otdel_helpers.py  router.py  session_reset.py  task_manager.py  ws_manager.py  ws_router.py
core/synpin/cli/: __init__.py  commands.py  console.py  dev.py
core/synpin/config/: __init__.py  agents.yaml  channels.yaml  departments.yaml  external_agents.yaml  manager.py  memory.yaml  providers.yaml.example  roles.yaml  security.yaml  settings.yaml  tools.yaml  watcher.py
core/synpin/connections/: __init__.py  auto_approval.py  auto_escalation.py  config.py  models.py  prompt.py  refs.py  resolve.py  service.py
core/synpin/cron/: __init__.py  intent_parser.py  jobs.py  models.py  scheduler.py
core/synpin/engine/: __init__.py
core/synpin/events/: __init__.py  api.py  bus.py  settings.py
core/synpin/kanban/: __init__.py  auto_delete.py  config.py  deadline.py  models.py  service.py
core/synpin/memory/: __init__.py  frozen_snapshot.py  manager.py  search.py  state.py  store.py
core/synpin/projects/: __init__.py  config.py  models.py  router.py  service.py
core/synpin/protocol/: __init__.py  config.py
core/synpin/router/: __init__.py
(+230 files in other folders)
