# Python core for SynPin - Multi-Agent Framework
[project]
name = "synpin-core"
version = "0.5.1.43"
description = "Agent-driven organization platform"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.0",
    "httpx>=0.28",
    "chromadb>=0.5",
    "pyyaml>=6.0",
    "rich>=13.0",
    "watchdog>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
    "mypy>=1.0",
    "colorama>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"

# Note: no [project.scripts] entry for 'synpin'.
#
# pip would generate a bundled launcher at venv/Scripts/synpin.exe (or
# venv/bin/synpin on Unix) — a Python zipapp that hardcodes the Python
# interpreter from the venv where pip ran. That launcher then leaks into
# any PATH that lists that venv's Scripts/ directory (commonly the
# case for tool venvs like Hermes-agent). Users end up running the
# wrong launcher from the wrong venv, which is how the original
# ModuleNotFoundError surfaced on a fresh install.
#
# The hand-written bin/synpin (Unix) and bin/synpin.cmd (Windows) in
# the repo root are the canonical launchers. They resolve the repo
# root at runtime, prefer the repo-local .venv, and fall back to a
# legacy core/.venv location for backward compatibility. Add the
# bin/ directory to PATH instead of relying on entry_points.
